--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <input type="text" name="cargoMass"/>
                 </label>
             </div>
-            <button>Submit</button>
+            <button id="submitButton">Submit</button>
         </form>
 
         <div id="launchStatusCheck">
