Added preventDefault validation

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <form id="launchForm">
             <div class="form-group">
                 <label>Pilot Name 
-                  <input type="text" name="pilotName"/>
+                  <input id="pilotName" type="text" name="pilotName"/>
                 </label>
             </div>
             <div class="form-group">
                 <label>Co-pilot Name 
-                  <input type="text" name="copilotName"/>
+                  <input id="copilotName" type="text" name="copilotName"/>
                 </label>
             </div>
             <div class="form-group">
                 <label>Fuel Level (L) 
-                  <input type="text" name="fuelLevel"/>
+                  <input id="fuelLevel" type="text" name="fuelLevel"/>
                 </label> 
             </div>
             <div class="form-group">
                 <label>Cargo Mass (kg) 
-                  <input type="text" name="cargoMass"/>
+                  <input id="cargoMass" type="text" name="cargoMass"/>
                 </label>
             </div>
             <button id="submitButton">Submit</button>
